--- a/flink-demo/src/main/resources/log4j.properties
+++ b/flink-demo/src/main/resources/log4j.properties
@@ -3,4 +3,4 @@ log4j.rootLogger = warn,stdout
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} Method:%l%n Thread: %t %n    %m%n
+log4j.appender.stdout.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} Method:%l%n%m%n
