--- a/flink-demo/pom.xml
+++ b/flink-demo/pom.xml
@@ -70,6 +70,13 @@
             <scope>${flink.scope}</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-csv</artifactId>
+            <version>${flink.version}</version>
+            <scope>${flink.scope}</scope>
+        </dependency>
+
         <!--flink 无关-->
         <dependency>
             <groupId>org.projectlombok</groupId>
