--- a/flink-demo/pom.xml
+++ b/flink-demo/pom.xml
@@ -77,6 +77,18 @@
             <scope>${flink.scope}</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-kafka_2.11</artifactId>
+            <version>1.14.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-json</artifactId>
+            <version>1.14.3</version>
+        </dependency>
+
         <!--flink 无关-->
         <dependency>
             <groupId>org.projectlombok</groupId>
